feat: add api for authentication
